--- a/.github/workflows/releases-big-openwrt.yml
+++ b/.github/workflows/releases-big-openwrt.yml
@@ -75,7 +75,7 @@ jobs:
         WHOAMI: breakings
         #KERNEL_REPO_URL: https://github.com/breakings/OpenWrt/tree/main/opt
         KERNEL_VERSION_NAME: 6.1.134_6.6.87
-        #OPENWRT_VER: R23.5.1
+        OPENWRT_VER: R25.10.1
         KERNEL_AUTO_LATEST: true
         GZIP_IMGS: .gz
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
