--- a/.github/workflows/releases-big-openwrt.yml
+++ b/.github/workflows/releases-big-openwrt.yml
@@ -44,8 +44,8 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        docker rmi `docker images -q`
-        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        docker rmi -f $(docker images -q) 2>/dev/null || true
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
         sudo -E apt-get -qq install $(curl -fsSL https://tinyurl.com/ubuntu2404-make-openwrt)
         sudo -E apt-get -qq autoremove --purge
